--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "hex-rgb": "^4.1.0",
     "ios-inner-height": "^1.1.1",
     "react": "^16.13.1",
+    "react-div-100vh": "^0.5.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
