--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.13.1",
     "react-div-100vh": "^0.5.0",
     "react-dom": "^16.13.1",
+    "react-ga": "^3.1.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
     "typewriter-effect": "^2.13.1"
