--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@testing-library/user-event": "^7.2.1",
     "hex-rgb": "^4.1.0",
     "ios-inner-height": "^1.1.1",
+    "jquery": "^3.5.1",
     "parallax-js": "^3.1.0",
     "react": "^16.13.1",
     "react-div-100vh": "^0.5.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
+    "tilt.js": "^1.2.1",
     "typewriter-effect": "^2.13.1"
   },
   "scripts": {
