--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "hex-rgb": "^4.1.0",
+    "imagesloaded": "^4.1.4",
     "ios-inner-height": "^1.1.1",
     "jquery": "^3.5.1",
+    "masonry-layout": "^4.2.2",
     "parallax-js": "^3.1.0",
     "react": "^16.13.1",
     "react-div-100vh": "^0.5.0",
