--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.5.3",
+    "circletype": "^2.3.0",
     "hex-rgb": "^4.1.0",
     "imagesloaded": "^4.1.4",
     "ios-inner-height": "^1.1.1",
