--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^16.13.1",
     "react-ga": "^3.1.2",
     "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.4.0",
     "react-scripts": "^3.4.1",
     "tilt.js": "^1.2.1",
     "typewriter-effect": "^2.13.1"
